--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,24 @@ jobs:
       - name: Run tests
         run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
 
-  generate-release:
-    needs: [test]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+---
+name: Create Release
+
+on:
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version number for the release (e.g., v1.0.0)'
+        required: true
+        type: string
+
+jobs:
+  create-release:
     runs-on: ubuntu-latest
     permissions:
       contents: write
       pull-requests: read
+
     steps:
       - uses: actions/checkout@v3
         with:
@@ -47,34 +58,38 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Check for version bump
-        id: version_check
+      - name: Validate version format
         run: |
-          if git log -1 --pretty=%B | grep -q "chore: bump version"; then
-            echo "is_version_bump=true" >> $GITHUB_OUTPUT
-            echo "VERSION=$(git describe --tags --abbrev=0)" >> $GITHUB_OUTPUT
-          else
-            echo "is_version_bump=false" >> $GITHUB_OUTPUT
+          if [[ ! ${{ github.event.inputs.version }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Error: Version must be in format v1.0.0"
+            exit 1
           fi
 
       - name: Generate Release Notes
-        if: steps.version_check.outputs.is_version_bump == 'true'
         id: release_notes
         uses: actions/github-script@v6
         with:
           script: |
             const generateNotes = require('./.github/scripts/generate-release-notes.js')
-            const notes = await generateNotes({github, context})
-            return notes
+            const notes = await generateNotes({
+              github, 
+              context,
+              version: '${{ github.event.inputs.version }}'
+            })
+            core.setOutput('notes', notes)
+
+      - name: Create Tag
+        run: |
+          git tag ${{ github.event.inputs.version }}
+          git push origin ${{ github.event.inputs.version }}
 
       - name: Create Release
-        if: steps.version_check.outputs.is_version_bump == 'true'
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.version_check.outputs.VERSION }}
-          name: Release ${{ steps.version_check.outputs.VERSION }}
-          body: ${{ steps.release_notes.outputs.result }}
+          tag_name: ${{ github.event.inputs.version }}
+          name: Release ${{ github.event.inputs.version }}
+          body: ${{ steps.release_notes.outputs.notes }}
           draft: false
           prerelease: false
