--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version number for the release (e.g., v1.0.0)'
+        description: 'Version number for the release (e.g., v1.0.0) must include v'
         required: true
         type: string
 
@@ -20,11 +20,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
       - name: Validate version format
         run: |
           if [[ ! ${{ github.event.inputs.version }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
@@ -32,18 +27,24 @@ jobs:
             exit 1
           fi
 
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
+
       - name: Generate Release Notes
         id: release_notes
         uses: actions/github-script@v6
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const generateNotes = require('./.github/scripts/generate-release-notes.js')
             const notes = await generateNotes({
-              github, 
+              github,
               context,
               version: '${{ github.event.inputs.version }}'
             })
-            core.setOutput('notes', notes)
+            return notes
 
       - name: Create Tag
         run: |
@@ -57,6 +58,6 @@ jobs:
         with:
           tag_name: ${{ github.event.inputs.version }}
           name: Release ${{ github.event.inputs.version }}
-          body: ${{ steps.release_notes.outputs.notes }}
+          body: ${{ steps.release_notes.outputs.result }}
           draft: false
           prerelease: false
