--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,9 @@ on:
         description: 'Version number for the release (e.g., v1.0.0) must include v'
         required: true
         type: string
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   create-release:
@@ -19,6 +22,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: main
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Validate version format
         run: |
@@ -36,15 +41,10 @@ jobs:
         id: release_notes
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const generateNotes = require('./.github/scripts/generate-release-notes.js')
-            const notes = await generateNotes({
-              github,
-              context,
-              version: '${{ github.event.inputs.version }}'
-            })
-            return notes
+            const script = require('./.github/scripts/generate-release-notes.js')
+            const notes = await script({github, context})
+            core.setOutput('notes', notes)
 
       - name: Create Tag
         run: |
@@ -58,6 +58,6 @@ jobs:
         with:
           tag_name: ${{ github.event.inputs.version }}
           name: Release ${{ github.event.inputs.version }}
-          body: ${{ steps.release_notes.outputs.result }}
+          body: ${{ steps.release_notes.outputs.notes }}
           draft: false
           prerelease: false
